# pkgbump

./: Cargo.toml  README.md
src/: extract_pkgbuild.sh  main.rs
