[package]
name = "pkgbump"
description = "Automate version bumping AUR packages"
version = "0.1.0"
authors = ["Dror Levin <spatz@psybear.com>"]
edition = "2018"
repository = "https://github.com/drrlvn/pkgbump/"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
digest = "0.8.1"
hex = "0.4.0"
md-5 = "0.8.0"
regex = "1.3.1"
reqwest = "0.9.20"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
sha-1 = "0.8.1"
sha2 = "0.8.0"
structopt = "0.3.1"
tempfile = "3.1.0"

[profile.release]
lto = true
